<resources>
    <string name="app_name">TmMuse</string>


    <string name="whats_new">Täze uýtgeşmeler</string>
    <string name="in_design"> Dizaýnda </string>
    <string name="in_func"> Funksiýada </string>
    <string name="ask_permission"> Rugsatlar gerek! </string>
    <string name="permission_desc"> Bu programmanyň käbir aýratynlyklaryny ulanmak üçin rugsat bermeli. Her rugsadyň düşündirişine serediň </string>
    <string name="location"> Lokaysin yerleşýän ýeri </string>
    <string name="location_desc"> locationerleşýän ýeriňiz boýunça howa maglumatyny görkeziň </string>
    <string name="storage"> Saklamak </string>
    <string name="storage_desc"> Dostlaryňyz bilen paýlaşmak üçin programma faýllarymyzy ýazdyryň </string>
    <string name="allow_btn"> Rugsat berlen </string>
    <string name="skip"> Geçmek </string>
    <string name="sgn_up"> Hasaba giriň </string>
    <string name="sign_up_desc"> Ulanyjy programmamyza ýazylsa, ulanyjy programmadan has köp aýratynlyk alyp biler. </string>
    <string name="full_name"> Doly ady: </string>
    <string name="ph_number"> Telefon belgisi: </string>
    <string name="sms_code"> Bu ýere kod giriziň </string>
    <string name="save"> Saklamak </string>
    <string name="slc_interest"> Gyzyklanmalary saýlaň </string>
    <string name="next"> Indiki </string>
    <string name="nw_movies"> Täze filmler </string>
    <string name="prom_and_offers"> Mahabat we teklipler </string>
    <string name="category"> Kategoriýa </string>
    <string name="afisha"> Afisha </string>
    <string name="interesting"> Gyzykly </string>
    <string name="cafe_res"> Kafe we ​​restoran </string>
    <string name="shops"> Dükanlar </string>
    <string name="beauty_sport"> Gözellik we sport </string>
    <string name="news"> Habarlar </string>
    <string name="inbox"> Gelýän bukja </string>
    <string name="tm_muse_card"> TmMuse Card </string>
    <string name="get_card"> Kart alyň </string>
    <string name="tm_muse_card_desc"> TmMuse kartasyny alyň we aşakdaky mahabat  teklipleri ulanyň. Şu ýere basyň:<font color='#CD2791'> <u><b>Kart alyň</b></u></font></string>
    <string name="data_birth"> Doglan senesi: </string>
    <string name="gender"> Jyns </string>
    <string name="pass_inf"> Pasport maglumatlary: </string>
    <string name="job"> Iş: </string>
    <string name="accept"> <font color='#CD2791'> <u><b>Şahsy maglumatlary gaýtadan işlemegiň şertlerini</b></u></font> kabul edýärin </string>
    <string name="reciv_about_card"> Kart hakda maglumat alyň: </string>
    <string name="Send"> Ibermek </string>
    <string name="u_must_sign"> Ilki bilen ýazylmaly </string>
    <string name="settings"> Sazlamalar </string>
    <string name="dark_mode"> Garaňky reňk</string>
    <string name="profile"> Profil </string>
    <string name="language"> Dil </string>
    <string name="help"> Kömek </string>
    <string name="feedback"> Seslenme </string>
    <string name="terms_use"> Ulanyş şertleri </string>
    <string name="about"> Biz hakda </string>
    <string name="log_out"> Çykyş </string>
    <string name="slc_language"> Dil saýlaň </string>
    <string name="pay_attention"> Üns beriň! </string>
    <string name="pay_attention_desc"> "OK" -a bassaňyz, çykarsyňyz we ähli maglumatlaryňyz programmadan arassalanar! </string>
    <string name="cancel"> Ýatyr </string>
    <string name="ok"> Bolýar </string>
    <string name="top_keywords"> Iň esasy açar sözler </string>
    <string name="search_result"> Gözleg netijesi </string>
    <string name="search"> Gözleg ... </string>
    <string name="clear_history"> Arassala </string>
    <string name="search_not_found"> ​​Gözleg tapylmady </string>
    <string name="check_internet"> Internet birikmäňizi barlaň </string>
    <string name="low_connect"> Pes internet birikmesi </string>
    <string name="per_need"> Rugsat gerek </string>
    <string name="per_need_des"> Bu rugsat bu programmada gowy işlemek üçin </string>

    <string name="hello_blank_fragment"> Salam boş bölek </string>
    <string name="email"> E-poçta: </string>
    <string name="your_message"> Habaryňyz </string>
    <string name="after_call"> Ibereniňizden soň, telefon belgiňize jaň ederis. </string>
    <string name="sel_lang"> Dil saýlaň </string>

    <string name="open_weather_maps_app_id" translatable="false">00812ec5b87092305675827de0904bc2</string>
    <string name="student">Talyp</string>
    <string name="worker">Gulukçy</string>
    <string name="school_stu">Okuwçy</string>
    <string name="filt_shop">Filterlemek</string>
    <string name="tags">Bellikler</string>
    <string name="sort">Sort</string>
    <string name="from_oldest">Koneler</string>
    <string name="from_latest">Tazeler</string>
    <string name="filter">Seljermek</string>
    <string name="wait_to_weather">Ýüklenýär....</string>
    <string name="btn_text_open_sheet" translatable="false">Ouvrir la feuille</string>
    <string name="btn_text_close_sheet" translatable="false">Fermer la fueille</string>
    <string name="sheetbehavior" translatable="false">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="tv_sheet_header" translatable="false">Choisir vos options</string>
    <string name="btn_text_sheet1" translatable="false">Lancer </string>
    <string name="btn_text_sheet2" translatable="false">Ouvrir </string>
    <string name="btn_text_sheet3" translatable="false">Commencer </string>
    <string name="code_inncorect"> Kod nädogry girizildi </string>
    <string name="see_more"> Has giňişleýin serediň </string>
    <string name="call"> Jaň </string>
    <string name="map"> Karta </string>
    <string name="insta">\@insta </string>
    <string name="certificate"> Sertifikat </string>
    <string name="address"> Salgy </string>
    <string name="past_an_plan_text"> Meýilnamanyň tekstini geçdi </string>
    <string name="payment"> Töleg </string>
    <string name="work_hours"> Iş sagatlary </string>
    <string name="cuisine"> Aşhana </string>
    <string name="deliver"> Getirmek </string>
    <string name="average_check"> Ortaça barlag </string>
    <string name="own_promotion"> Özüňi mahabatlandyrmak </string>
    <string name="gallery"> Galereýa </string>
    <string name="posts"> Postsazgylar </string>
    <string name="bron_movie"> Bron filmi </string>
    <string name="description"> Düşündiriş </string>
    <string name="movie_time"> Kino Wagty </string>
    <string name="vr_image"> VR "\n" Surat </string>
    <string name="please_check_your_internet_connection"> Internet birikmäňizi barlaň </string>
    <string name="top_keyword"> Iň esasy açar söz </string>
    <string name="male"> erkek </string>
    <string name="female"> aýal </string>
    <string name="clear_history_all">Taryhy arassala</string>
    <string name="search_history">Gözleg taryhy</string>
    <string name="tm_muse_message">TM MUSE habary</string>
    <string name="enter_informations"> Maglumatlary giriziň: </string>
    <string name="select_date_and_time"> Sene we wagty saýlaň: </string>
    <string name="enter_count_off_ticket"> Hasaplaşyk peteklerini giriziň: </string>
    <string name="Answer_buy_ticket"> Bu filmi bron etmek isleýärsiňizmi? </string>
    <string name="price"> Bahasy: </string>
    <string name="buy_ticket_desc"> Film başlamazdan 30 minut öň kinoteatra gelmeli! </string>
    <string name="no"> ýok </string>
    <string name="yes"> Hawa </string>
    <string name="visit_page"> Sahypany görmek </string>
    <string name="enter_amount_of_certificate"> Şahadatnamanyň mukdaryny giriziň: </string>
    <string name="your_promo_code"> mahabat koduňyz: </string>
    <string name="promo_code"> Promo kody </string>
    <string name="select_phone_number"> Telefon belgisini saýlaň </string>
    <string name="terminal_have"> bar </string>

    <string name="access_get_card">Siziň bilen ýakyn wagtda habarlaşarys</string>
    <string name = "first_you_must_sign_up"> Ilki bilen <font color = '#CD2791'> <u> <b> ýazylmaly </b> </u> </font> </string>
    <string name = "wait"> Garaşmagyňyzy haýyş edýäris ... </string>
    <string name = "chek_brith"> Doglan günüňizi belläň </string>
    <string name = "chek_gender"> Jynsyňyzy saýlaň </string>
    <string name = "chek_email"> E-poçtaňyzy ýazyň </string>
    <string name = "chek_permission"> Rugsat kabul etmeli </string>
    <string name = "chek_info_card"> Kartyňyz barada maglumat almak isleýäniňizi saýlaň </string>
    <string name = "chek_permission_for"> Rugsatlary kabul ediň </string>
    <string name = "two_click_exit"> Çykmak üçin Yza gaýdyp basyň </string>
    <string name = "how_many_tickets"> Näçe bilet isleýändigiňizi ýazyň </string>
    <string name = "ticket_details"> Bilet jikme-jiklikleri </string>
    <string name = "no_data"> Maglumat ýok </string>

    <string name="error_values">Nadogry kod girizildi</string>
    <string name="enter_number">Telefon belginizi doly girizin</string>
    <string name="get_sms">Sms arkaly gelen kody ashakdaky oyjuklere girizin!</string>
    <string name="enter_all_values">Maglumatlary doly girizin</string>

    <string name="terminal">terminal</string>
    <string name="cash">nagyt</string>
    <string name="free_time">Free time</string>
    <string name="cooming_soon">Comming soon</string>
    <string name="all_promo">Ählisi</string>



</resources>