<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/filter_profile_back"
    tools:context=".Fragment.ProfileFragment.ProfileFilterFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margins"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/filt_shop_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filt_shop"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/clear_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:ellipsize="marquee"
                android:text="@string/clear_history"
                android:textColor="@color/text_color"
                android:textSize="10sp"
                android:singleLine="true" />

        </LinearLayout>

        <TextView
            android:id="@+id/tags_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margins"
            android:layout_marginTop="10dp"
            android:text="@string/tags"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/margins"
            android:layout_marginRight="@dimen/margins"
            android:background="@color/text_color" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tags_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margins"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/margins"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/sort_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margins"
            android:layout_marginTop="10dp"
            android:text="@string/sort"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/margins"
            android:layout_marginRight="@dimen/margins"
            android:background="@color/text_color" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <soup.neumorphism.NeumorphButton
                android:id="@+id/latest_button"
                style="@style/Filter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margins"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:clickable="true"
                android:drawableStart="@drawable/ic_down"
                android:gravity="center"
                android:padding="18dp"
                android:text="@string/from_latest"
                android:textSize="10sp"
                android:layout_weight="1" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/oldest_button"
                style="@style/Filter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:drawableStart="@drawable/ic_up"
                android:gravity="center"
                android:padding="18dp"
                android:text="@string/from_oldest"
                android:textSize="10sp"
                android:layout_weight="1" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/filter_bottom_btn_back"
        android:gravity="center"
        android:padding="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/filter"
            android:textColor="#FFF"
            android:textSize="16sp" />

    </LinearLayout>
</RelativeLayout>