<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:overScrollMode="never">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margins"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/filt_shop_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filt_shop"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/clear_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/clear_history"
                    android:textColor="@color/text_color"
                    android:textSize="12sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/tags_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margins"
                android:layout_marginTop="10dp"
                android:text="@string/tags"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/margins"
                android:layout_marginRight="@dimen/margins"
                android:background="@color/text_color" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tags_rec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margins"
                android:overScrollMode="never"
                android:nestedScrollingEnabled="false"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/margins" />

            <TextView
                android:id="@+id/sort_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margins"
                android:layout_marginTop="10dp"
                android:text="@string/sort"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/margins"
                android:layout_marginRight="@dimen/margins"
                android:background="@color/text_color" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <soup.neumorphism.NeumorphButton
                    android:id="@+id/latest_button"
                    style="@style/Filter_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/margins"
                    android:layout_marginTop="15dp"
                    android:drawableStart="@drawable/ic_down"
                    android:gravity="center"
                    android:padding="18dp"
                    android:text="@string/from_latest"
                    android:textSize="12sp" />

                <soup.neumorphism.NeumorphButton
                    android:id="@+id/oldest_button"
                    style="@style/Filter_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:drawableStart="@drawable/ic_up"
                    android:gravity="center"
                    android:padding="18dp"
                    android:text="@string/from_oldest"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/filter_bottom_btn_back"
                android:gravity="center"
                android:padding="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/filter"
                    android:textColor="#FFF"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>