<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:background="@drawable/log_out_popup_back"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pay_attention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/pay_attention"
            android:textColor="@color/text_color"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/pay_attention_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginTop="-10dp"
            android:padding="10dp"
            android:text="@string/pay_attention_desc"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/text_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/log_out_popup_layout_back">

            <TextView
                android:id="@+id/cancel_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@id/view_stick_vertical"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/aply_text_color"
                android:textSize="18sp" />

            <View
                android:id="@+id/view_stick_vertical"
                android:layout_width="1.5dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@color/text_color" />

            <TextView
                android:id="@+id/aply_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/view_stick_vertical"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/aply_text_color"
                android:textSize="18sp" />

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>