<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/margins"
    android:layout_marginEnd="@dimen/margins"
    android:background="@drawable/accept_buy_back_ticket"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:id="@+id/answer_buy_ticket_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Answer_buy_ticket"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_ticket_expired"
                android:tint="@color/aply_text_color" />

            <TextView
                android:id="@+id/price_bron_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="@color/aply_text_color"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginEnd="@dimen/margins"
            android:background="@drawable/brone_time_back"
            android:padding="10dp">

            <TextView
                android:id="@+id/desc_buy_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/buy_ticket_desc"
                android:textColor="@color/aply_text_color"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginEnd="@dimen/margins"
            android:orientation="horizontal">

            <soup.neumorphism.NeumorphButton
                android:id="@+id/no_btn"
                style="@style/Filter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="25dp"
                android:text="@string/no"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/yes_btn"
                style="@style/Filter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="25dp"
                android:text="@string/yes"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>