<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_promo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_language_back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/view_stick_back" />

        <TextView
            android:id="@+id/promo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginTop="25dp"
            android:text="@string/promo_code"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/your_promo_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/your_promo_code"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/code_number_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="123456789"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/close_bottom_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/aply_text_color"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>