<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_certificate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_language_back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/view_stick_back" />

        <TextView
            android:id="@+id/certificate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginTop="25dp"
            android:text="@string/certificate"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/write_cert_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginTop="10dp"
            android:text="@string/enter_amount_of_certificate"
            android:textColor="@color/text_color"
            android:textSize="14sp" />

        <soup.neumorphism.NeumorphCardView
            style="@style/CustomShapeAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginTop="@dimen/margins_five"
            android:layout_marginEnd="@dimen/margins"
            android:background="@drawable/gradient_press">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp">

                <EditText
                    android:id="@+id/certificate_ed_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margins_edt"
                    android:layout_marginRight="@dimen/margins_edt"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="0"
                    android:inputType="number"
                    android:maxLength="10000"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

            </LinearLayout>


        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/send_btn"
            style="@style/SettingsCardView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margins_save_btn"
            android:layout_marginTop="25dp"
            android:layout_marginRight="@dimen/margins_save_btn"
            android:gravity="center"
            android:text="@string/Send"
            android:textColor="#FFF"
            android:textSize="18sp"
            app:neumorph_backgroundColor="@color/aply_text_color" />

        <TextView
            android:id="@+id/close_bottom_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/aply_text_color"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>